udpated package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://safiullah-97.github.io/Library-management-system-frontend",
   "name": "frontend",
   "proxy": "https://library-management-system-mern-stack.vercel.app/api/v1/books",
   "version": "0.1.0",
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
